# avoid-blocks

./: .gitignore  Cargo.toml  flake.nix  index.html
.cargo/: config.toml
src/: lib.rs  main.rs
