[package]
name = "bevy-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["webgl2", "bevy_winit", "bevy_render"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

# Enable optimization for faster dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
